fix(bug): projects

--- a/src/contents/projects/brisik.mdx
+++ b/src/contents/projects/brisik.mdx
@@ -3,7 +3,7 @@ id: 1
 title: BRISIK
 slug: brisik
 is_featured: true
-description: BRISIK - App
+description: "BRISIK - App"
 cover_url: '/images/project/brisik.png'
 stacks: ['Laravel', 'Livewire', 'Jquery', 'Bootstrap']
 link_demo: "#"
