feat(project): add new project

--- a/src/contents/projects/unitama.mdx
+++ b/src/contents/projects/unitama.mdx
@@ -9,3 +9,5 @@ stacks: ['Laravel', 'Livewire', 'Jquery', 'Bootstrap']
 link_demo: "#Private"
 link_github: "https://github.com/Holymaiden/absensi-unitama"
 ---
+
+This app is for monitoring absensi Universitas Teknologi Akba Makassar
