fix(bug): image blog 3

--- a/src/contents/blogs/3-exploring-server-side-rendering-ssr-and-client-side-rendering-csr-in-next-js-14.mdx
+++ b/src/contents/blogs/3-exploring-server-side-rendering-ssr-and-client-side-rendering-csr-in-next-js-14.mdx
@@ -11,7 +11,7 @@ language: "EN"
 type: "Programming"
 ---
 
-![Next JS 14 SSR & CSR!](/images/blog/3-next-js-ssr-csr "Next JS 14 SSR & CSR")
+![Next JS 14 SSR & CSR!](/images/blog/3-next-js-ssr-csr.png "Next JS 14 SSR & CSR")
 
 Next.js, a powerful framework for React, has continued to evolve, offering developers more efficient ways to build web applications. With the release of Next.js 14, significant enhancements have been made to both Server-Side Rendering (SSR) and Client-Side Rendering (CSR), providing more flexibility and performance optimizations. This article delves into the nuances of SSR and CSR in the context of Next.js 14, helping developers understand their applications' best rendering strategy.
 
