fear(learn): add new content

--- a/src/contents/blogs/2-memaksimalkan-potensi-seo-dengan-next-js-14.mdx
+++ b/src/contents/blogs/2-memaksimalkan-potensi-seo-dengan-next-js-14.mdx
@@ -11,7 +11,7 @@ language: "ID"
 type: "Programming"
 ---
 
-![Next JS 14 SEO!](/images/blog/2-next-js-seo.png "Next JS 14 SEO")
+<center>![Next JS 14 SEO!](/images/blog/2-next-js-seo.png "Next JS 14 SEO")</center>
 
 Dalam dunia digital yang serba cepat, keberhasilan sebuah bisnis sering bergantung pada visibilitas online mereka. Next.js 14, dengan fitur-fiturnya yang inovatif, membuka jalan baru dalam optimisasi Search Engine Optimization (SEO) yang efektif. Artikel ini akan membahas bagaimana teknologi ini dapat digunakan untuk meningkatkan peringkat pencarian dan visibilitas online bisnis Anda.
 
