--- a/src/contents/blogs/1-next-js-14-membangun-masa.mdx
+++ b/src/contents/blogs/1-next-js-14-membangun-masa.mdx
@@ -11,7 +11,7 @@ language: "ID"
 type: "Programming"
 ---
 
-![Next JS 14!](/images/blog/1-next-simple.png "Next JS 14")
+<center>![Next JS 14!](/images/blog/1-next-simple.png "Next JS 14")</center>
 
 Dalam dunia web development, inovasi tidak pernah berhenti. Salah satu bukti nyata dari perkembangan teknologi ini adalah kemunculan Next.js 14. Platform ini tidak hanya menjadi jawaban atas kebutuhan pengembang aplikasi web modern, tetapi juga menetapkan standar baru dalam pembuatan aplikasi yang efisien dan tangkas. Artikel ini akan membahas secara mendalam tentang fitur-fitur terbaru dan bagaimana Next.js 14 membawa revolusi dalam dunia pengembangan web.
 
