frat(mdx): img to image next

--- a/src/contents/projects/auth-starter-react-native.mdx
+++ b/src/contents/projects/auth-starter-react-native.mdx
@@ -2,12 +2,12 @@
 id: 3
 title: Auth Starter React Native
 slug: auth-starter-react-native
-is_featured: true
-description: "This application is a starter project for Golang Gin"
+is_featured: false
+description: "The application is a starter project for React Native using JSON Web Token"
 cover_url: '/images/project/auth-starter.png'
-stacks: ['Golang']
+stacks: ['React Native']
 link_demo: "#"
-link_github: "https://github.com/Holymaiden/base-golang-holy"
+link_github: "https://github.com/Holymaiden/login-react-native-with-jwt"
 ---
 
-This application is a starter project for Golang Gin
+The application is a starter project for React Native using JSON Web Token
