--- a/src/contents/projects/golang-starter-template.mdx
+++ b/src/contents/projects/golang-starter-template.mdx
@@ -2,12 +2,12 @@
 id: 2
 title: Golang Starter Template
 slug: golang-starter-template
-is_featured: false
-description: "The application is a starter project for React Native using JSON Web Token"
+is_featured: true
+description: "This application is a starter project for Golang Gin"
 cover_url: '/images/project/golang-starter.png'
-stacks: ['React Native']
+stacks: ['Golang']
 link_demo: "#"
-link_github: "https://github.com/Holymaiden/login-react-native-with-jwt"
+link_github: "https://github.com/Holymaiden/base-golang-holy"
 ---
 
-The application is a starter project for React Native using JSON Web Token
+This application is a starter project for Golang Gin
